<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.riccieli.mercurio.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp">

        <!--  Status: Desconectado -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/status"
            android:id="@+id/status"
            android:elegantTextHeight="false"
            android:textColor="#000000"
            android:paddingRight="12dp"
            android:paddingLeft="6dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/desconectado"
            android:id="@+id/statusMessage"
            android:textColor="@color/gray"
            />
    </LinearLayout>
        <!--  Botão Conectar -->
        <Button
            android:id="@+id/btn_blueconnect"
            android:minWidth="230dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/img_bluetooth"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_gravity="center_horizontal"
            android:text="@string/connect"
            android:onClick="DiscoverDevices"
             />

    </LinearLayout>
</RelativeLayout>
